2006-03-02  Sergey Udaltsov <svu@gnome.org>

	Fixes #336396

	* gnome-keyboard-properties-xkblt.c: fixed the buttons sensitivity
	change.
	
2006-01-26  Rodrigo Moya <rodrigownovell.com>

	Fixes #328748

	* gnome-keyboard-properties.c (blink_to_widget): remove space
	before punctuation.

2006-01-22  Rodrigo Moya <rodrigo@novell.com>

	Fixes #168790

	* gnome-keyboard-properties.c (accessibility_button_clicked): dont
	use "capplet" in user-visible strings.

2006-01-09  Sergey Udaltsov <svu@gnome.org>

	Fixes bug #326275
	* gnome-keyboard-properties.glade: fixing the window title 
	capitalization

2006-01-08  Sergey Udaltsov <svu@gnome.org>

	Fixes bug #326137
	* gnome-keyboard-properties.glade: making the window a bit larger

2006-01-03  Jaap A. Haitsma <jaap@haitsma.org>

	Fixes bug #321549

	* gnome-keyboard-properties.c (create_dialog): don't leak
	GtkSizeGroup's.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keyboard-properties.c: (setup_dialog): Remove unused
	code.

2005-10-24  Muktha <muktha.narayan@wipro.com>

	Fixes part of #90932

	* gnome-keyboard-properties.glade: added accessible_description to
	some widgets.

2005-07-15  Mark McLoughlin  <mark@skynet.ie>

	Re-work the way some of the XKB GConf keys are handled.
	See bug #310513

	* gnome-keyboard-properties-xkb.c:
	(set_model_text), (model_key_changed), (setup_model_entry),
	(setup_xkb_tabs): make the "model" entry not be a peditor
	to we can correctly display the XKB default if the GConf
	key is unset.
	(enable_disable_restoring): update for API change.
	(reset_to_defaults): reset to defaults by unsetting the
	GConf keys rather than setting overrideSettings to true.
	
	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_get_selected_list): if the "layouts" key is unset,
	use the layouts list from the XKB defaults.
	
	* gnome-keyboard-properties-xkbot.c:
	(xkb_options_get_selected_list): ditto for the "options" key.
	
	* gnome-keyboard-properties-xkb.h: include gswitchit_config.h,