@@ -141,5 +141,53 @@
       </locale>
     </schema>
 
+    <schema>
+      <key>/schemas/apps/gswitchit/preview/x</key>
+      <applyto>/apps/gswitchit/preview/x</applyto>
+      <owner>gnome</owner>    
+      <type>int</type>
+      <default>-1</default>
+      <locale name="C">
+        <short>The Keyboard Preview, X offset</short>
+	<long>The Keyboard Preview, X offset</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gswitchit/preview/y</key>
+      <applyto>/apps/gswitchit/preview/y</applyto>
+      <owner>gnome</owner>    
+      <type>int</type>
+      <default>-1</default>
+      <locale name="C">
+        <short>The Keyboard Preview, Y offset</short>
+	<long>The Keyboard Preview, Y offset</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gswitchit/preview/width</key>
+      <applyto>/apps/gswitchit/preview/width</applyto>
+      <owner>gnome</owner>    
+      <type>int</type>
+      <default>-1</default>
+      <locale name="C">
+        <short>The Keyboard Preview, width</short>
+	<long>The Keyboard Preview, width</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gswitchit/preview/height</key>
+      <applyto>/apps/gswitchit/preview/height</applyto>
+      <owner>gnome</owner>    
+      <type>int</type>
+      <default>-1</default>
+      <locale name="C">
+        <short>The Keyboard Preview, height</short>
+	<long>The Keyboard Preview, height</long>
+      </locale>
+    </schema>
+
   </schemalist>
 </gconfschemafile>
